--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -1,40 +1,58 @@
-.wrap
-    .nameArticle Inspirations
-    .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
-    picture
-        .row1foto
+//- .wrap
+//-     .nameArticle Inspirations
+//-     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
+//-     picture
+//-         .row1foto
+//-             img(src="./assets/images/11.png", alt="#")
+//-             .row1foto-fill
+//-                 .about DESTINATIONS
+//-                 a.title(href="#") A Guide To Rocky Mountain Vacations
+//-                 .avatar
+//-                     .avatar1
+//-                         img(src="./assets/images/avatar5.png", alt="#")
+//-                         img(src="./assets/images/oval.png", alt="#")
+//-                     .avatar2    
+//-                         img(src="./assets/images/avatar6.png", alt="#")
+//-                         img(src="./assets/images/oval.png", alt="#")
+//-                     .avatar3
+//-                         img(src="./assets/images/avatar7.png", alt="#")
+//-                         img(src="./assets/images/oval.png", alt="#") 
+//-         .row1foto
+//-             img(src="./assets/images/12.png", alt="#")
+//-             .row1foto-fill
+//-                 .about DESTINATIONS
+//-                 a.title(href="#") Traveling To Barcelona
+//-     picture 
+//-         img(src="./assets/images/21.jpg", alt="#")
+//-         img(src="./assets/images/22.jpg", alt="#")
+//-         img(src="./assets/images/23.jpg", alt="#")
+//-     picture
+//-         .row1foto
+//-             img(src="./assets/images/31.jpg", alt="#")
+//-             .row1foto-fill
+//-                 .about DESTINATIONS
+//-                 a.title(href="#") Traveling To Barcelona  
+//-         .row1foto
+//-             img(src="./assets/images/32.jpg", alt="#")
+//-             .row1foto-fill
+//-                 .about DESTINATIONS
+//-                 a.title(href="#") A Guide To Rocky Mountain Vacations  
+
+.container
+    .row          
+        .col-md-8
             img(src="./assets/images/11.png", alt="#")
-            .row1foto-fill
-                .about DESTINATIONS
-                a.title(href="#") A Guide To Rocky Mountain Vacations
-                .avatar
-                    .avatar1
-                        img(src="./assets/images/avatar5.png", alt="#")
-                        img(src="./assets/images/oval.png", alt="#")
-                    .avatar2    
-                        img(src="./assets/images/avatar6.png", alt="#")
-                        img(src="./assets/images/oval.png", alt="#")
-                    .avatar3
-                        img(src="./assets/images/avatar7.png", alt="#")
-                        img(src="./assets/images/oval.png", alt="#") 
-        .row1foto
+        .col-6.col-md-4
             img(src="./assets/images/12.png", alt="#")
-            .row1foto-fill
-                .about DESTINATIONS
-                a.title(href="#") Traveling To Barcelona
-    picture 
-        img(src="./assets/images/21.jpg", alt="#")
-        img(src="./assets/images/22.jpg", alt="#")
-        img(src="./assets/images/23.jpg", alt="#")
-    picture
-        .row1foto
+    .row
+        .col-6.col-md-4
+            img(src="./assets/images/21.jpg", alt="#")
+        .col-6.col-md-4 
+            img(src="./assets/images/22.jpg", alt="#")
+        .col-6.col-md-4  
+            img(src="./assets/images/23.jpg", alt="#")
+    .row
+        .col-6.col-md-4
             img(src="./assets/images/31.jpg", alt="#")
-            .row1foto-fill
-                .about DESTINATIONS
-                a.title(href="#") Traveling To Barcelona  
-        .row1foto
+        .col-md-8
             img(src="./assets/images/32.jpg", alt="#")
-            .row1foto-fill
-                .about DESTINATIONS
-                a.title(href="#") A Guide To Rocky Mountain Vacations  
-                 
