--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -38,7 +38,10 @@
 //-                 .about DESTINATIONS
 //-                 a.title(href="#") A Guide To Rocky Mountain Vacations  
 
-.container
+.wrap
+    .nameArticle Inspirations
+    .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
+.container.inspiration_wrap
     .row          
         .col-md-8
             img(src="./assets/images/11.png", alt="#")
