--- a/css/inspirations.css
+++ b/css/inspirations.css
@@ -1,1 +1,26 @@
-/*# sourceMappingURL=inspirations.css.map */
+.wrap {
+  max-width: 1570px;
+  margin: 0 auto;
+  position: relative;
+}
+.wrap .nameArticle {
+  font-size: 64px;
+  color: #1c2e3d;
+  padding-top: 150px;
+  line-height: 80px;
+  text-align: center;
+}
+.wrap .textArticle {
+  font-size: 16px;
+  color: #788692;
+  font-family: "SFCompactText";
+  max-width: 640px;
+  line-height: 24px;
+  text-align: center;
+  text-align: center;
+  margin: 0 auto 96px auto;
+}
+
+.inspiration_wrap {
+  height: 100%;
+}/*# sourceMappingURL=inspirations.css.map */
