--- a/css/style.css
+++ b/css/style.css
@@ -495,10 +495,6 @@ section {
   text-transform: uppercase;
 }
 
-a {
-  text-decoration: none;
-}
-
 .wrap {
   max-width: 1570px;
   margin: 0 auto;
@@ -521,60 +517,9 @@ a {
   text-align: center;
   margin: 0 auto 96px auto;
 }
-.wrap picture {
-  display: flex;
-  width: 100%;
-  margin-bottom: 32px;
-}
-.wrap picture .row1foto {
-  position: relative;
-}
-.wrap picture .row1foto .row1foto-fill {
-  position: absolute;
-  left: 40px;
-  display: flex;
-  flex-direction: column;
-  top: 322px;
-}
-.wrap picture .row1foto .row1foto-fill .about {
-  font-size: 10px;
-  color: #ffffff;
-  line-height: 12px;
-  letter-spacing: 1.1px;
-  text-transform: uppercase;
-  margin-bottom: 8px;
-}
-.wrap picture .row1foto .row1foto-fill .title {
-  font-size: 32px;
-  color: #ffffff;
-  line-height: 40px;
-  margin-bottom: 30px;
-}
-.wrap picture .row1foto .row1foto-fill .avatar {
-  position: relative;
-}
-.wrap picture .row1foto .row1foto-fill .avatar .avatar1 {
-  position: absolute;
-}
-.wrap picture .row1foto .row1foto-fill .avatar .avatar1 img {
-  position: absolute;
-}
-.wrap picture .row1foto .row1foto-fill .avatar .avatar2 {
-  position: absolute;
-  left: 32px;
-}
-.wrap picture .row1foto .row1foto-fill .avatar .avatar2 img {
-  position: absolute;
-}
-.wrap picture .row1foto .row1foto-fill .avatar .avatar3 {
-  position: absolute;
-  left: 64px;
-}
-.wrap picture .row1foto .row1foto-fill .avatar .avatar3 img {
-  position: absolute;
-}
-.wrap picture .row1foto2 {
-  position: relative;
+
+.inspiration_wrap {
+  height: 100%;
 }
 
 .footer .containerFooter .column .btn, .wrapMainText .btn, .leftColumn .btnTop, .leftColumn .btnBottom, .wrapForm form .btnForm {
