styles for inspirations

--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -42,20 +42,20 @@
     .nameArticle Inspirations
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
 .container.inspiration_wrap
-    .row          
+    .row.mb-5     
         .col-md-8
-            img(src="./assets/images/11.png", alt="#")
+            img(src="./assets/images/11.png", alt="#").img-fluid
         .col-6.col-md-4
-            img(src="./assets/images/12.png", alt="#")
-    .row
+            img(src="./assets/images/12.png", alt="#").img-fluid
+    .row.mb-5
         .col-6.col-md-4
-            img(src="./assets/images/21.jpg", alt="#")
+            img(src="./assets/images/21.jpg", alt="#").img-fluid
         .col-6.col-md-4 
-            img(src="./assets/images/22.jpg", alt="#")
+            img(src="./assets/images/22.jpg", alt="#").img-fluid
         .col-6.col-md-4  
-            img(src="./assets/images/23.jpg", alt="#")
+            img(src="./assets/images/23.jpg", alt="#").img-fluid
     .row
         .col-6.col-md-4
-            img(src="./assets/images/31.jpg", alt="#")
+            img(src="./assets/images/31.jpg", alt="#").img-fluid
         .col-md-8
-            img(src="./assets/images/32.jpg", alt="#")
+            img(src="./assets/images/32.jpg", alt="#").img-fluid
