--- a/assets/style/inspirations.scss
+++ b/assets/style/inspirations.scss
@@ -49,6 +49,14 @@ $margin: 0 auto;
         text-align: center;
         margin: 0 auto 96px auto;
     }
+    picture {
+        display: flex;
+        width: 100%;
+        margin-bottom: 32px;
+    }
+
+
+
     // picture {
     //     display: flex;
     //     width: 100%;
