--- a/css/inspirations.css
+++ b/css/inspirations.css
@@ -20,6 +20,11 @@
   text-align: center;
   margin: 0 auto 96px auto;
 }
+.wrap picture {
+  display: flex;
+  width: 100%;
+  margin-bottom: 32px;
+}
 
 .inspiration_wrap {
   height: 100%;
