--- a/css/style.css
+++ b/css/style.css
@@ -517,6 +517,11 @@ section {
   text-align: center;
   margin: 0 auto 96px auto;
 }
+.wrap picture {
+  display: flex;
+  width: 100%;
+  margin-bottom: 32px;
+}
 
 .inspiration_wrap {
   height: 100%;
