first three avatars

--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -43,8 +43,21 @@
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
 .container.inspiration_wrap
     .row.mb-5     
-        .col-md-8
+        .col-md-8.posRelative
             img(src="./assets/images/11.png", alt="#").img-fluid
+            .row1foto-fill
+            .about DESTINATIONS
+                a.title(href="#") A Guide To Rocky Mountain Vacations
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar5.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar6.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
+                    .avatar3
+                        img(src="./assets/images/avatar7.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#") 
         .col-6.col-md-4
             img(src="./assets/images/12.png", alt="#").img-fluid
     .row.mb-5
