--- a/assets/style/inspirations.scss
+++ b/assets/style/inspirations.scss
@@ -1,8 +1,10 @@
 $max-width: 1570px;
 $margin: 0 auto;
+
 %btn {
     display: flex;
     justify-content: center;
+
     button {
         color: #ffffff;
         font-size: 12px;
@@ -17,14 +19,17 @@ $margin: 0 auto;
     font-size: $f;
     color: $c;
 }
+
 @mixin flex_jc($justify) {
     display: flex;
     justify-content: $justify;
 }
+
 @mixin flex_fd($direction) {
     display: flex;
     flex-direction: $direction;
 }
+
 @mixin posAbs_left($left) {
     position: absolute;
     left: $left;
@@ -34,12 +39,14 @@ $margin: 0 auto;
     max-width: $max-width;
     margin: $margin;
     position: relative;
+
     .nameArticle {
         @include fontsc(64px, #1c2e3d);
         padding-top: 150px;
         line-height: 80px;
         text-align: center;
     }
+
     .textArticle {
         @include fontsc(16px, #788692);
         font-family: "SFCompactText";
@@ -49,66 +56,118 @@ $margin: 0 auto;
         text-align: center;
         margin: 0 auto 96px auto;
     }
-    picture {
-        display: flex;
-        width: 100%;
-        margin-bottom: 32px;
-    }
-
-
 
     // picture {
     //     display: flex;
     //     width: 100%;
     //     margin-bottom: 32px;
-    //     .row1foto {
-    //         position: relative;
-    //         .row1foto-fill {
-    //             @include posAbs_left(40px);
-    //             display: flex;
-    //             flex-direction: column;
-    //             top: 322px;
-    //             .about {
-    //                 @include fontsc(10px, #ffffff);
-    //                 line-height: 12px;
-    //                 letter-spacing: 1.1px;
-    //                 text-transform: uppercase;
-    //                 margin-bottom: 8px;
-    //             }
-    //             .title {
-    //                 @include fontsc(32px, #ffffff);
-    //                 line-height: 40px;
-    //                 margin-bottom: 30px;
-    //             }
-    //             .avatar{
-    //                 position: relative;
-    //                 .avatar1{
-    //                     position: absolute;
-    //                     img{
-    //                         position: absolute;
-    //                     }
-    //                 }
-    //                 .avatar2{
-    //                     @include posAbs_left(32px);
-    //                     img{
-    //                         position: absolute;
-    //                     }
-    //                 }
-    //                 .avatar3{
-    //                     @include posAbs_left(64px);
-    //                     img{
-    //                         position: absolute;
-    //                     }
-    //                 }
-    //             }
-    //         }
-    //     }
-    //     .row1foto2 {
-    //         position: relative;
-    //     }
     // }
+
 }
-.inspiration_wrap{
+
+.posRelative{
+    position: relative;
+}
+.about {
+    @include posAbs_left(5%);
+    @include fontsc(10px, #ffffff);
+    bottom: 15%;
+    line-height: 12px;
+    letter-spacing: 1.1px;
+    margin-bottom: 8px;
+    a{
+        text-decoration: none;
+        display: block
+    }
+    .title {
+        @include fontsc(32px, #ffffff);
+        line-height: 40px;
+        margin-bottom: 30px;
+    }
+
+    .avatar {
+        position: relative;
+
+        .avatar1 {
+            position: absolute;
+
+            img {
+                position: absolute;
+            }
+        }
+
+        .avatar2 {
+            @include posAbs_left(32px);
+
+            img {
+                position: absolute;
+            }
+        }
+
+        .avatar3 {
+            @include posAbs_left(64px);
+
+            img {
+                position: absolute;
+            }
+        }
+    }
+
+}
+
+// picture {
+//     display: flex;
+//     width: 100%;
+//     margin-bottom: 32px;
+//     .row1foto {
+//         position: relative;
+//         .row1foto-fill {
+//             @include posAbs_left(40px);
+//             display: flex;
+//             flex-direction: column;
+//             top: 322px;
+//             .about {
+//                 @include fontsc(10px, #ffffff);
+//                 line-height: 12px;
+//                 letter-spacing: 1.1px;
+//                 text-transform: uppercase;
+//                 margin-bottom: 8px;
+//             }
+//             .title {
+//                 @include fontsc(32px, #ffffff);
+//                 line-height: 40px;
+//                 margin-bottom: 30px;
+//             }
+//             .avatar{
+//                 position: relative;
+//                 .avatar1{
+//                     position: absolute;
+//                     img{
+//                         position: absolute;
+//                     }
+//                 }
+//                 .avatar2{
+//                     @include posAbs_left(32px);
+//                     img{
+//                         position: absolute;
+//                     }
+//                 }
+//                 .avatar3{
+//                     @include posAbs_left(64px);
+//                     img{
+//                         position: absolute;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     .row1foto2 {
+//         position: relative;
+//     }
+// }
+// }
+
+.inspiration_wrap {
     height: 100%;
     padding: 0;
 }
