--- a/css/inspirations.css
+++ b/css/inspirations.css
@@ -20,10 +20,53 @@
   text-align: center;
   margin: 0 auto 96px auto;
 }
-.wrap picture {
-  display: flex;
-  width: 100%;
-  margin-bottom: 32px;
+
+.posRelative {
+  position: relative;
+}
+
+.about {
+  position: absolute;
+  left: 5%;
+  font-size: 10px;
+  color: #ffffff;
+  bottom: 15%;
+  line-height: 12px;
+  letter-spacing: 1.1px;
+  margin-bottom: 8px;
+}
+.about a {
+  text-decoration: none;
+  display: block;
+}
+.about .title {
+  font-size: 32px;
+  color: #ffffff;
+  line-height: 40px;
+  margin-bottom: 30px;
+}
+.about .avatar {
+  position: relative;
+}
+.about .avatar .avatar1 {
+  position: absolute;
+}
+.about .avatar .avatar1 img {
+  position: absolute;
+}
+.about .avatar .avatar2 {
+  position: absolute;
+  left: 32px;
+}
+.about .avatar .avatar2 img {
+  position: absolute;
+}
+.about .avatar .avatar3 {
+  position: absolute;
+  left: 64px;
+}
+.about .avatar .avatar3 img {
+  position: absolute;
 }
 
 .inspiration_wrap {
