--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,7 @@ header .navbar .mainTitle {
   width: 100%;
   position: absolute;
   left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   top: 0;
   left: 0;
@@ -197,8 +196,7 @@ header .navbar .mainTitle {
 .row a.col .item-inner img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transition: all 0.4 ease;
 }
 .row a.col .item-inner:before {
@@ -354,8 +352,7 @@ section {
   position: absolute;
   left: 0;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 100%;
   top: 0;
   left: 0;
@@ -517,10 +514,53 @@ section {
   text-align: center;
   margin: 0 auto 96px auto;
 }
-.wrap picture {
-  display: flex;
-  width: 100%;
-  margin-bottom: 32px;
+
+.posRelative {
+  position: relative;
+}
+
+.about {
+  position: absolute;
+  left: 5%;
+  font-size: 10px;
+  color: #ffffff;
+  bottom: 15%;
+  line-height: 12px;
+  letter-spacing: 1.1px;
+  margin-bottom: 8px;
+}
+.about a {
+  text-decoration: none;
+  display: block;
+}
+.about .title {
+  font-size: 32px;
+  color: #ffffff;
+  line-height: 40px;
+  margin-bottom: 30px;
+}
+.about .avatar {
+  position: relative;
+}
+.about .avatar .avatar1 {
+  position: absolute;
+}
+.about .avatar .avatar1 img {
+  position: absolute;
+}
+.about .avatar .avatar2 {
+  position: absolute;
+  left: 32px;
+}
+.about .avatar .avatar2 img {
+  position: absolute;
+}
+.about .avatar .avatar3 {
+  position: absolute;
+  left: 64px;
+}
+.about .avatar .avatar3 img {
+  position: absolute;
 }
 
 .inspiration_wrap {
