--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -70,5 +70,18 @@
     .row
         .col-6.col-md-4
             img(src="./assets/images/31.jpg", alt="#").img-fluid
-        .col-md-8
+        .col-md-8.posRelative
             img(src="./assets/images/32.jpg", alt="#").img-fluid
+            .row1foto-fill
+            .about DESTINATIONS
+                a.title(href="#") A Guide To Rocky Mountain Vacations
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar5.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar6.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
+                    .avatar3
+                        img(src="./assets/images/avatar7.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#") 
