--- a/css/firstArticle.css
+++ b/css/firstArticle.css
@@ -5,6 +5,9 @@
   max-width: 730px;
 }
 
+.row {
+  margin-right: 0;
+}
 .row a.col {
   position: relative;
   margin: 10px;
@@ -18,7 +21,8 @@
 .row a.col .item-inner img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.4 ease;
 }
 .row a.col .item-inner:before {
