--- a/css/form.css
+++ b/css/form.css
@@ -14,7 +14,6 @@
 .wrapForm {
   max-width: 1570px;
   margin: 150px auto 0 auto;
-  height: 798px;
   position: relative;
 }
 .wrapForm img {
@@ -26,7 +25,7 @@
   display: flex;
   flex-direction: column;
   max-width: 368px;
-  top: 336px;
+  bottom: 20%;
 }
 .wrapForm .blockForm .blockTitle {
   font-size: 64px;
@@ -44,7 +43,7 @@
   max-width: 501px;
   position: absolute;
   right: 133px;
-  top: 452px;
+  bottom: -10%;
   background-color: #ffffff;
 }
 .wrapForm form .wrapInput {
