inspirations avatar in img 12

--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -58,8 +58,18 @@
                     .avatar3
                         img(src="./assets/images/avatar7.png", alt="#")
                         img(src="./assets/images/oval.png", alt="#") 
-        .col-6.col-md-4
+        .col-6.col-md-4.posRelative
             img(src="./assets/images/12.png", alt="#").img-fluid
+            .row1foto-fill
+            .about DESTINATIONS
+                a.title(href="#") Traveling To Barcelona
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar5.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar6.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
     .row.mb-5
         .col-6.col-md-4
             img(src="./assets/images/21.jpg", alt="#").img-fluid
