--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -65,11 +65,11 @@
                 a.title(href="#") Traveling To Barcelona
                 .avatar
                     .avatar1
-                        img(src="./assets/images/avatar5.png", alt="#")
-                        img(src="./assets/images/oval.png", alt="#")
+                        img(src="./assets/images/avatar8.png", alt="#")
+                        //- img(src="./assets/images/oval.png", alt="#")
                     .avatar2    
-                        img(src="./assets/images/avatar6.png", alt="#")
-                        img(src="./assets/images/oval.png", alt="#")
+                        img(src="./assets/images/avatar9.png", alt="#")
+                        //- img(src="./assets/images/oval.png", alt="#")
     .row.mb-5
         .col-6.col-md-4
             img(src="./assets/images/21.jpg", alt="#").img-fluid
