avatar in img22

--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -69,10 +69,26 @@
                     .avatar2    
                         img(src="./assets/images/avatar9.png", alt="#")
     .row.mb-5
-        .col-6.col-md-4
+        .col-6.col-md-4.posRelative
             img(src="./assets/images/21.jpg", alt="#").img-fluid
-        .col-6.col-md-4 
+            .row1foto-fill
+            .about DESTINATIONS
+                a.title(href="#") Party Jokes Startling But Unnecessary
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar10.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar11.png", alt="#")
+        .col-6.col-md-4.posRelative
             img(src="./assets/images/22.jpg", alt="#").img-fluid
+            .row1foto-fill
+            .about
+                a.title(href="#") Maui By Air The Best Way Around The Island
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar12.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar13.png", alt="#")
         .col-6.col-md-4  
             img(src="./assets/images/23.jpg", alt="#").img-fluid
     .row
