avatar in img31

--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -94,6 +94,15 @@
     .row
         .col-6.col-md-4
             img(src="./assets/images/31.jpg", alt="#").img-fluid
+            .row1foto-fill.posRelative
+            .about DESTINATIONS
+                a.title(href="#") Traveling To Barcelona
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar14.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar15.png", alt="#")
+
         .col-md-8.posRelative
             img(src="./assets/images/32.jpg", alt="#").img-fluid
             .row1foto-fill
