--- a/css/inspirations.css
+++ b/css/inspirations.css
@@ -30,7 +30,7 @@
   left: 40px;
   font-size: 10px;
   color: #ffffff;
-  bottom: 15%;
+  bottom: 70px;
   line-height: 12px;
   letter-spacing: 1.1px;
   margin-bottom: 8px;
