--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,7 @@ section {
   left: 40px;
   font-size: 10px;
   color: #ffffff;
-  bottom: 15%;
+  bottom: 48px;
   line-height: 12px;
   letter-spacing: 1.1px;
   margin-bottom: 8px;
