--- a/assets/style/inspirations.scss
+++ b/assets/style/inspirations.scss
@@ -71,7 +71,7 @@ $margin: 0 auto;
 .about {
     @include posAbs_left(40px);
     @include fontsc(10px, #ffffff);
-    bottom: 15%;
+    bottom: 70px;
     line-height: 12px;
     letter-spacing: 1.1px;
     margin-bottom: 8px;
