secondArticle right column width

--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -106,7 +106,7 @@
         .col-md-8.posRelative
             img(src="./assets/images/32.jpg", alt="#").img-fluid
             .row1foto-fill
-            .about DESTINATIONS
+            .about
                 a.title(href="#") A Guide To Rocky Mountain Vacations
                 .avatar
                     .avatar1
