--- a/assets/style/secondArticle.scss
+++ b/assets/style/secondArticle.scss
@@ -1,8 +1,10 @@
 $max-width: 1570px;
 $margin: 0 auto;
+
 %btn {
     display: flex;
     justify-content: center;
+
     button {
         color: #ffffff;
         font-size: 12px;
@@ -17,14 +19,17 @@ $margin: 0 auto;
     font-size: $f;
     color: $c;
 }
+
 @mixin flex_jc($justify) {
     display: flex;
     justify-content: $justify;
 }
+
 @mixin flex_fd($direction) {
     display: flex;
     flex-direction: $direction;
 }
+
 @mixin posAbs_left($left) {
     position: absolute;
     left: $left;
@@ -37,15 +42,17 @@ section {
     height: 1080px;
 }
 
-.container-main  {
+.container-main {
     max-width: $max-width;
     height: 1080px;
     position: relative;
 }
+
 .leftColumn {
     position: absolute;
     top: 604px;
     max-width: 634px;
+
     .btnTop {
         width: 132px;
         height: 48px;
@@ -53,17 +60,20 @@ section {
         border-radius: 24px;
         @extend %btn;
     }
+
     .callFeatured {
         @include fontsc(48px, #ffffff);
         height: 128px;
         line-height: 64px;
         margin: 16px 0px;
     }
+
     .textFeatured {
         @include fontsc(14px, #ffffff);
         font-family: "SFCompactText";
         line-height: 20px;
     }
+
     .btnBottom {
         margin-top: 40px;
         max-width: 274px;
@@ -73,43 +83,58 @@ section {
         @extend %btn;
     }
 }
+
 .rightContainer {
     position: absolute;
-    max-width: 678px;
+    width: 35.4%;
     right: 0;
     top: 0;
+
+    .rectangle {
+        width: 100%;
+        height: 1080px;
+    }
+
     .rightColumn {
         @include posAbs_left(133px);
         max-width: 368px;
         top: 127px;
         left: 133px;
+
         .callSecondCol {
             @include fontsc(64px, #ffffff);
             max-width: 368px;
             line-height: 80px;
         }
+
         .topics {
             margin-top: 64px;
             @include flex_fd(column);
+
             .topic:not(:last-child) {
                 border-bottom: 1px solid rgba(227, 227, 227, 0.5);
             }
+
             .topic {
                 display: flex;
                 margin-top: 32px;
+
                 img {
                     max-width: 48px;
                     max-height: 48px;
                     border-radius: 50%;
                     margin-right: 32px;
                 }
+
                 .topicWrap {
                     max-width: 288px;
+
                     .textTopic {
                         @include fontsc(18px, #ffffff);
                         line-height: 24px;
                         margin-bottom: 8px;
                     }
+
                     .dateTopic {
                         font-size: 11px;
                         line-height: 13px;
@@ -129,10 +154,12 @@ section {
     height: 100%;
     top: 0;
     left: 0;
+
     img {
         width: 100%;
         height: 1080px;
     }
+
     .rectangle {
         max-width: 35.4%;
         position: absolute;
