--- a/css/secondArticle.css
+++ b/css/secondArticle.css
@@ -56,9 +56,13 @@ section {
 
 .rightContainer {
   position: absolute;
-  max-width: 678px;
+  width: 35.4%;
   right: 0;
   top: 0;
+}
+.rightContainer .rectangle {
+  width: 100%;
+  height: 1080px;
 }
 .rightContainer .rightColumn {
   position: absolute;
