--- a/css/style.css
+++ b/css/style.css
@@ -302,9 +302,13 @@ section {
 
 .rightContainer {
   position: absolute;
-  max-width: 678px;
+  width: 35.4%;
   right: 0;
   top: 0;
+}
+.rightContainer .rectangle {
+  width: 100%;
+  height: 1080px;
 }
 .rightContainer .rightColumn {
   position: absolute;
@@ -529,7 +533,7 @@ section {
   left: 40px;
   font-size: 10px;
   color: #ffffff;
-  bottom: 48px;
+  bottom: 70px;
   line-height: 12px;
   letter-spacing: 1.1px;
   margin-bottom: 8px;
