--- a/css/secondArticle.css
+++ b/css/secondArticle.css
@@ -69,7 +69,7 @@ section {
   left: 133px;
   max-width: 368px;
   top: 127px;
-  left: 133px;
+  left: 20%;
 }
 .rightContainer .rightColumn .callSecondCol {
   font-size: 64px;
