--- a/assets/style/firstArticle.scss
+++ b/assets/style/firstArticle.scss
@@ -41,77 +41,69 @@ $margin: 0 auto;
     max-width: 730px;
 }
 
-.row {
-    margin-right: 0;
-    a.col {
-        position: relative;
-        margin: 10px;
-        padding: 0;
+.item-inner {
+    position: relative;
+    height: 550px;
+    overflow: hidden;
+    border-radius: 5px;
+    display: block;
 
-        .item-inner {
-            height: 100%;
-            overflow: hidden;
-            border-radius: 5px;
+    img {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        object-fit: cover;
+        transition: all .4s ease;
+    }
 
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                transition: all .4 ease;
-            }
+    &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: #73AFBA;
+        border-radius: 5px;
+        opacity: 0;
+        transition: all 0.4s ease;
+        z-index: 10;
+    }
 
-            &:before {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                background: #73AFBA;
-                border-radius: 5px;
-                opacity: 0;
-                transition: all 0.4s ease;
-                z-index: 10;
-            }
-
-            &:hover:before {
-                opacity: 0.9;
-                border-radius: 5px;
-            }
+    &:hover:before {
+        opacity: 0.9;
+        border-radius: 5px;
+    }
 
 
-            .item-text {
-                position: absolute;
-                max-width: 230px;
-                left: 50px;
-                bottom: 60px;
-                font-family: 'SFProDisplay';
-                font-size: 24px;
-                color: #FFFFFF;
-                overflow: hidden;
-                z-index: 20;
+    .item-text {
+        position: absolute;
+        max-width: 230px;
+        left: 50px;
+        bottom: 60px;
+        font-family: 'SFProDisplay';
+        font-size: 24px;
+        color: #FFFFFF;
+        overflow: hidden;
+        z-index: 20;
 
-                span {
-                    display: block;
-                    transform: translateY(70px);
-                    transition: transform .3s ease;
-                }
-            }
+        span {
+            display: block;
+            transform: translateY(70px);
+            transition: transform .3s ease;
+        }
+    }
 
-            &:hover {
-                img {
-                    transform: scale(1.05);
-                }
-
-                .item-text {
-                    span {
-                        transform: translateY(0);
-                    }
-                }
-            }
+    &:hover {
+        img {
+            transform: scale(1.05);
         }
 
-
+        .item-text {
+            span {
+                transform: translateY(0);
+            }
+        }
     }
 }
 
