--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,3 +1,16 @@
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/maps";
+@import "node_modules/bootstrap/scss/mixins";
+@import "node_modules/bootstrap/scss/utilities";
+@import "node_modules/bootstrap/scss/reboot";
+@import "node_modules/bootstrap/scss/type";
+@import "node_modules/bootstrap/scss/containers";
+@import "node_modules/bootstrap/scss/grid";
+
+@import "node_modules/bootstrap/scss/images";
+
+
 @import 'template.scss';
 @import 'styleHeader.scss';
 @import 'firstArticle.scss';
@@ -6,3 +19,11 @@
 @import 'form.scss';
 @import 'inspirations.scss';
 @import 'footer.scss';
+
+body {
+    margin: 0;
+}
+img {
+    // width: 100%;
+    vertical-align: middle;
+}
