--- a/components/firstArticle.pug
+++ b/components/firstArticle.pug
@@ -1,23 +1,24 @@
-section.container
-    .text-left.text-h1 Become A Travel Pro In One Easy Lesson
-    .row
-        a.col(href="")  
-            .item-inner  
-                img(src="./assets/images/Group4.jpg", alt="")
-                .item-text
-                    span Vacation Home Rental Success
-        a.col(href="")
-            .item-inner    
-                img(src="./assets/images/MaskGroup.png", alt="")
-                .item-text
-                    span Vacation Home Rental Success
-        a.col(href="")  
-            .item-inner    
-                img(src="./assets/images/Copy8.png", alt="")
-                .item-text
-                    span Vacation Home Rental Success
-        a.col(href="")  
-            .item-inner    
-                img(src="./assets/images/Copy9.png", alt="")
-                .item-text
-                    span Vacation Home Rental Success
+section
+    .container
+        .text-left.text-h1 Become A Travel Pro In One Easy Lesson
+        .row
+            .col-md-3
+                a(href="#").item-inner  
+                    img(src="./assets/images/Group4.jpg", alt="")
+                    .item-text
+                        span Vacation Home Rental Success
+            .col-md-3
+                a(href="#").item-inner    
+                    img(src="./assets/images/MaskGroup.png", alt="")
+                    .item-text
+                        span Vacation Home Rental Success
+            .col-md-3 
+                a(href="#").item-inner    
+                    img(src="./assets/images/Copy8.png", alt="")
+                    .item-text
+                        span Vacation Home Rental Success
+            .col-md-3
+                a(href="#").item-inner    
+                    img(src="./assets/images/Copy9.png", alt="")
+                    .item-text
+                        span Vacation Home Rental Success
