--- a/index.pug
+++ b/index.pug
@@ -1,11 +1,11 @@
 doctype html
 html(lang="en")
   head
+    meta(charset="UTF-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= 'Mitravel'
-    //- link(rel="stylesheet", href="css/style.css")
-    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css")
-    style 
-      include css/style.css
+    link(rel="stylesheet", href="./assets/style/style.scss")
   body
     include components/navbar.pug
     include components/firstArticle.pug
