--- a/components/navbar.pug
+++ b/components/navbar.pug
@@ -1,27 +1,28 @@
-header    
-    picture.background 
-        img(src='./assets/images/Background.jpg', alt="#")
-    .container
-        nav.navbar
-            .social 
-                img(src='./assets/images/Path.png', alt='#')
-                img(src='./assets/images/Path.svg', alt="#")
-            .mainTitle MITRAVEL
-            .mainTitle
-                img(src='./assets/images/ham.png', alt='#')
-        .wrapMainText 
-            .head NEW BOOK
-            .title Mother Earth Hosts Our Travels
-            .mainText There are not many cities that have experienced such social and political extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the atrocities of war for the first time in 400 years, became the radical center of 1960s social movements and witnessed a complete 
-            .btn 
-                button BUY THE BOOK        
-        .bottomHead
-                input(type="text" placeholder='Search stories')
-                .picture
-                    img(src="./assets/images/Rectangle2.jpg", alt="#")
-                    .btnPlay   
-                        img(src="./assets/images/play2.png", alt="#")      
-                    .toggle
-                        img(src="./assets/images/arrow-left.svg", alt="#") 
-                        p wonderful moutain
-                        img(src="./assets/images/arrow-right.svg", alt="#")      
+header
+    .wrap-mainView    
+        picture.background 
+            img(src='./assets/images/Background.jpg', alt="#")
+        .container
+            nav.navbar
+                .social 
+                    img(src='./assets/images/Path.png', alt='#')
+                    img(src='./assets/images/Path.svg', alt="#")
+                .mainTitle MITRAVEL
+                .mainTitle
+                    img(src='./assets/images/ham.png', alt='#')
+            .wrapMainText 
+                .head NEW BOOK
+                .title Mother Earth Hosts Our Travels
+                .mainText There are not many cities that have experienced such social and political extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the atrocities of war for the first time in 400 years, became the radical center of 1960s social movements and witnessed a complete 
+                .btn 
+                    button BUY THE BOOK        
+            .bottomHead
+                    input(type="text" placeholder='Search stories')
+                    .picture
+                        img(src="./assets/images/Rectangle2.jpg", alt="#")
+                        .btnPlay   
+                            img(src="./assets/images/play2.png", alt="#")      
+                        .toggle
+                            img(src="./assets/images/arrow-left.svg", alt="#") 
+                            p wonderful moutain
+                            img(src="./assets/images/arrow-right.svg", alt="#")      
