--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -10,7 +10,7 @@
 //-         .bottomTextPlay A Guide To Rocky Mountain Vacations 
 //-     img(src='./assets/images/2.jpg', alt="#").sizeImg
 .container-fluid.wrap_thirdArticle 
-    .row.gx-5.align-items-center 
+    .row.gx-5.align-items-center.mr-del 
         .col
             img(src='./assets/images/3.jpg', alt="#").item_img_width
         .col-6.d-flex.justify-content-center.position_Text
@@ -19,7 +19,7 @@
                 img(src="./assets/images/play.png", alt="#") 
             img(src='./assets/images/1.jpg', alt="#").item_img_width
                 
-        .col.d-flex.justify-content-end
+        .col.d-flex.justify-content-end.pr-del 
             img(src='./assets/images/2.jpg', alt="#").item_img_width
 
         
