--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -1,7 +1,7 @@
 .wrap
     .nameArticle Inspirations
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
-.container.inspiration_wrap
+.container.wrap
     .row.mb-5     
         .col-md-8.posRelative
             img(src="./assets/images/11.png", alt="#").img-fluid
