--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -2,7 +2,7 @@
     .nameArticle Inspirations
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
 .container.wrap
-    .row.mb-5     
+    .row.mb-5.margin-bot-5     
         .col-md-8.posRelative
             img(src="./assets/images/11.png", alt="#").img-fluid
             .row1foto-fill
@@ -28,7 +28,7 @@
                         img(src="./assets/images/avatar8.png", alt="#")
                     .avatar2    
                         img(src="./assets/images/avatar9.png", alt="#")
-    .row.mb-5
+    .row.mb-5.margin-bot-5
         .col-6.col-md-4.posRelative
             img(src="./assets/images/21.jpg", alt="#").img-fluid
             .row1foto-fill
