--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -1,26 +1,24 @@
 .wrap
     .nameArticle Featured Videos
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
-//- picture
-//-     img(src='./assets/images/3.jpg', alt="#").sizeImg
-//-     .wrapVideo
-//-         img(src='./assets/images/1.jpg', alt="#")
-//-         .btnPlay 
-//-             img(src="./assets/images/play.png", alt="#")
-//-         .bottomTextPlay A Guide To Rocky Mountain Vacations 
-//-     img(src='./assets/images/2.jpg', alt="#").sizeImg
-.container-fluid.wrap_thirdArticle 
-    .row.gx-5.align-items-center.mr-del 
-        .col
-            img(src='./assets/images/3.jpg', alt="#").item_img_width
-        .col-6.d-flex.justify-content-center.position_Text
-            .bottomTextPlay A Guide To Rocky Mountain Vacations
-            .btnPlay 
-                img(src="./assets/images/play.png", alt="#") 
-            img(src='./assets/images/1.jpg', alt="#").item_img_width
+//- .container-fluid.wrap_thirdArticle 
+//-     .row.gx-5.align-items-center.mr-del 
+//-         .col
+//-             img(src='./assets/images/333.jpg', alt="#").item_img_width
+//-         .col-6.d-flex.justify-content-center.position_Text
+//-             .bottomTextPlay A Guide To Rocky Mountain Vacations
+//-             .btnPlay 
+//-                 img(src="./assets/images/play.png", alt="#") 
+//-             img(src='./assets/images/1.jpg', alt="#").item_img_width
                 
-        .col.d-flex.justify-content-end.pr-del 
-            img(src='./assets/images/2.jpg', alt="#").item_img_width
-
-        
+//-         .col.d-flex.justify-content-end.pr-del 
+//-             img(src='./assets/images/222.jpg', alt="#").item_img_width
+.container-carusel 
+    .row-carusel 
+        .cover-img1
+            img(src='./assets/images/333.jpg', alt="#")
+        .cover-img2
+            img(src='./assets/images/1.jpg', alt="#")
+        .cover-img3
+            img(src='./assets/images/222.jpg', alt="#")
    
