--- a/assets/style/thirdArticle.scss
+++ b/assets/style/thirdArticle.scss
@@ -43,9 +43,28 @@
     width: 1920px;
     height: 670px;
     overflow: hidden;
+
     .row-carusel {
-        display: flex;
-        transform: translateX(-75px);
         width: 1920px;
+        display: flex;
+        transform: translateX(-43%);
+        height: 690px;
+
+        .img-center {
+            position: relative;
+            padding: 0 2rem;
+
+            .img-toggel {
+                width: 94%;
+                justify-content: space-between;
+                display: flex;
+                position: absolute;
+                top: 50%;
+            }
+        }
+
+        .item-img {
+            height: 100%;
+        }
     }
 }
