--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -15,10 +15,13 @@
 //-             img(src='./assets/images/222.jpg', alt="#").item_img_width
 .container-carusel 
     .row-carusel 
-        .cover-img1
-            img(src='./assets/images/333.jpg', alt="#")
-        .cover-img2
-            img(src='./assets/images/1.jpg', alt="#")
-        .cover-img3
-            img(src='./assets/images/222.jpg', alt="#")
+        .cover-img
+            img(src='./assets/images/333.jpg', alt="#").item-img
+        .cover-img.img-center
+            img(src='./assets/images/1.jpg', alt="#").item-img
+            .img-toggel 
+                button.btn-left 11111
+                button.btn-right 22222
+        .cover-img
+            img(src='./assets/images/222.jpg', alt="#").item-img
    
