--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -15,7 +15,10 @@
 //-             img(src='./assets/images/222.jpg', alt="#").item_img_width
 .container-carusel 
     .row-carusel 
-            img(src='./assets/images/333.jpg', alt="#").item-img
-            img(src='./assets/images/1.jpg', alt="#").item-img
-            img(src='./assets/images/222.jpg', alt="#").item-img
-   
+        img(src='./assets/images/333.jpg', alt="#").item-img
+        img(src='./assets/images/1.jpg', alt="#").item-img
+        img(src='./assets/images/222.jpg', alt="#").item-img
+    .img-toggel
+        button.bntLeft LLLL 
+        button.btnRight RRRR
+    
