--- a/assets/style/thirdArticle.scss
+++ b/assets/style/thirdArticle.scss
@@ -43,6 +43,15 @@
     width: 1920px;
     height: 670px;
     overflow: hidden;
+    position: relative;
+
+    .img-toggel {
+        width: 94%;
+        justify-content: space-between;
+        display: flex;
+        position: absolute;
+        top: 50%;
+    }
 
     .row-carusel {
         width: 1920px;
@@ -54,13 +63,6 @@
             position: relative;
             padding: 0 2rem;
 
-            .img-toggel {
-                width: 94%;
-                justify-content: space-between;
-                display: flex;
-                position: absolute;
-                top: 50%;
-            }
         }
 
         .item-img {
