--- a/index.pug
+++ b/index.pug
@@ -15,5 +15,5 @@ html(lang="en")
     include components/inspirations.pug
     include components/footer.pug
 
-    script(src="components/thirdArticle.js") 
+    //- script(src="components/thirdArticle.js") 
 
