--- a/assets/style/thirdArticle.scss
+++ b/assets/style/thirdArticle.scss
@@ -1,72 +1,73 @@
-// .wrap_thirdArticle {
-//     padding: 0;
-//     margin-bottom: 150px;
+.wrap_thirdArticle {
+    padding: 0;
+    margin-bottom: 150px;
 
-//     .mr-del {
-//         margin-right: 0;
-//     }
-//     .pr-del {
-//         padding-right: 0;
-//     }
-
-//     .row {
-//         flex-wrap: nowrap;
-
-//         .item_img_width {
-//             width: 100%;
-
-//         }
-
-//         .position_Text {
-//             position: relative;
-
-//             .bottomTextPlay {
-//                 @include posAbs_left(5%);
-//                 @include fontsc(32px, #ffffff);
-//                 bottom: 5%;
-//                 line-height: 40px;
-//             }
-
-//             .btnPlay {
-//                 @include posAbs_left(48px);
-//                 top: 39px;
-//             }
-//         }
-
-//     }
-
-// }
-
-.container-carusel {
-    // width: 5000px;
-    height: 670px;
-    width: 1920px;
-    height: 670px;
-    overflow: hidden;
-    position: relative;
-
-    .img-toggel {
-        width: 94%;
-        justify-content: space-between;
-        display: flex;
-        position: absolute;
-        top: 50%;
+    .mr-del {
+        margin-right: 0;
+    }
+    .pr-del {
+        padding-right: 0;
     }
 
-    .row-carusel {
-        width: 1920px;
-        display: flex;
-        transform: translateX(-43%);
-        height: 690px;
+    .row {
+        flex-wrap: nowrap;
 
-        .img-center {
-            position: relative;
-            padding: 0 2rem;
-
-        }
-
-        .item-img {
+        .item_img_width {
+            width: 100%;
             height: 100%;
+            object-fit: cover;
         }
+
+        .position_Text {
+            position: relative;
+
+            .bottomTextPlay {
+                @include posAbs_left(5%);
+                @include fontsc(32px, #ffffff);
+                bottom: 5%;
+                line-height: 40px;
+            }
+
+            .btnPlay {
+                @include posAbs_left(48px);
+                top: 39px;
+            }
+        }
+
     }
+
 }
+
+// .container-carusel {
+//     // width: 5000px;
+//     height: 670px;
+//     width: 1920px;
+//     height: 670px;
+//     overflow: hidden;
+//     position: relative;
+
+//     .img-toggel {
+//         width: 94%;
+//         justify-content: space-between;
+//         display: flex;
+//         position: absolute;
+//         top: 50%;
+//     }
+
+//     .row-carusel {
+//         width: 1920px;
+//         display: flex;
+//         transform: translateX(-43%);
+//         height: 690px;
+
+//         .img-center {
+//             position: relative;
+//             padding: 0 2rem;
+
+//         }
+
+//         .item-img {
+//             height: 100%;
+//         }
+//     }
+// }
