--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -49,8 +49,16 @@
                         img(src="./assets/images/avatar12.png", alt="#")
                     .avatar2    
                         img(src="./assets/images/avatar13.png", alt="#")
-        .col-6.col-md-4  
+        .col-6.col-md-4.posRelative
             img(src="./assets/images/23.jpg", alt="#").img-fluid
+            .row1foto-fill
+            .about
+                a.title(href="#") A Guide To Rocky Mountain Vacations
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar12.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar13.png", alt="#")
     .row
         .col-6.col-md-4.posRelative
             img(src="./assets/images/31.jpg", alt="#").img-fluid
